--- a/front/src/assets/styles/base/_fonts.scss
+++ b/front/src/assets/styles/base/_fonts.scss
@@ -4,3 +4,5 @@
 @import '../fonts/Lato/latolatinfonts.css';
 
 @import '../fonts/HPIcons/style.css';
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&subset=latin-ext');
