--- a/front/src/templates/_partials/header.njk
+++ b/front/src/templates/_partials/header.njk
@@ -35,7 +35,7 @@
                 <div class="app-header__col">
                     <section class="app-logo">
                         <h1 class="app-logo__text">
-                            <a href="/">
+                            <a href="./home.html">
                                 <img src="assets/images/logo.svg" alt="dalej do przodu">
                             </a>
                         </h1>
