--- a/front/src/templates/index.njk
+++ b/front/src/templates/index.njk
@@ -13,7 +13,19 @@
                     <a href="./about.html" class="pages__link" target="_blank">O mnie</a>
                 </li>
                 <li class="pages__item">
+                    <a href="./program.html" class="pages__link" target="_blank">Program wyborczy</a>
+                </li>
+                <li class="pages__item">
                     <a href="./qa.html" class="pages__link" target="_blank">Zadaj mi pytanie</a>
+                </li>
+                <li class="pages__item">
+                    <a href="./news.html" class="pages__link" target="_blank">Aktuaności</a>
+                </li>
+                <li class="pages__item">
+                    <a href="./team.html" class="pages__link" target="_blank">Moi kandydaci</a>
+                </li>
+                <li class="pages__item">
+                    <a href="./contact.html" class="pages__link" target="_blank">Kontakt</a>
                 </li>
                 <!-- endTemplatesList -->
             </ul>
