--- a/front/src/templates/member.njk
+++ b/front/src/templates/member.njk
@@ -1,16 +1,15 @@
 {% import "_components/components.njk" as components %}
-{% set slug = 'about' %}
-{% set title = 'Hanna Pruchniewska - o mnie' %}
+{% set slug = 'team' %}
+{% set title = 'Hanna Pruchniewska - kandydaci na radnych' %}
 {% extends "_layouts/default.njk" %}
 {% block content %}
-
     <div class="app-section">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="col-content">
                         <section class="section-title section-title--light || app-component text-center">
-                            <h2 class="section-title__text">O mnie</h2>
+                            <h2 class="section-title__text">Margareta Kowalska</h2>
                         </section>
 
                         <section class="app-text app-text--article || app-component">
