--- a/front/src/templates/news-single.njk
+++ b/front/src/templates/news-single.njk
@@ -1,32 +1,32 @@
 {% import "_components/components.njk" as components %}
-{% set slug = 'about' %}
-{% set title = 'Hanna Pruchniewska - o mnie' %}
+{% set slug = 'news' %}
+{% set title = 'Hanna Pruchniewska - aktualności' %}
 {% extends "_layouts/default.njk" %}
 {% block content %}
-
     <div class="app-section">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="col-content">
-                        <section class="section-title section-title--light || app-component text-center">
-                            <h2 class="section-title__text">O mnie</h2>
+                        <section class="section-title section-title--picture || app-component text-center" style="background-image: url('assets/images/background3.jpg')">
+                            <p class="section-title__before-text">1 wrześna 2018</p>
+                            <h2 class="section-title__text">Lorem ipsum dolor sit amet</h2>
                         </section>
 
                         <section class="app-text app-text--article || app-component">
-                            <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, tenetur.</h3>
+                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores culpa dicta eos, illum sint totam! Corporis delectus eius maxime molestias pariatur! Laboriosam nisi nulla odit perspiciatis sint, sit tempora.</h4>
                             <p><br></p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci corporis doloribus esse, excepturi expedita nemo rerum voluptatibus! Aperiam commodi consequatur dolore est eum molestiae officia officiis, porro soluta tempore voluptatum.</p>
                             <p><br></p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem doloremque explicabo iste, quia quidem repellat sequi! Accusantium asperiores assumenda autem beatae consequatur consequuntur cum cumque cupiditate debitis delectus dolorem esse excepturi exercitationem iure iusto molestias nihil nisi nostrum optio pariatur provident quam quibusdam ratione reprehenderit saepe, sed veritatis voluptas? Dicta?</p>
                         </section>
 
-                        <section class="app-picture app-picture--stretch">
-                            <img src="assets/images/background3.jpg" alt="">
+                        <section class="app-picture app-picture--center">
+                            <img src="assets/images/news3.jpg" alt="">
                         </section>
 
                         <section class="app-text app-text--article || app-component">
-                            <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, tenetur.</h3>
+                            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, tenetur.</h4>
                             <p><br></p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci corporis doloribus esse, excepturi expedita nemo rerum voluptatibus! Aperiam commodi consequatur dolore est eum molestiae officia officiis, porro soluta tempore voluptatum.</p>
                             <p><br></p>
