--- a/front/src/templates/qa.njk
+++ b/front/src/templates/qa.njk
@@ -1,6 +1,6 @@
 {% import "_components/components.njk" as components %}
 {% set slug = 'qa' %}
-{% set title = 'Starter - o mnie' %}
+{% set title = 'Hanna Pruchniewska - zadaj mi pytanie' %}
 {% extends "_layouts/default.njk" %}
 {% block content %}
     <div class="app-section">
@@ -59,6 +59,44 @@
                             <hr>
                         </section>
                         <section class="last-qa">
+                            <div class="last-qa__title">
+                                <h2 class="last-qa__title-text">Odpowiedzi</h2>
+                            </div>
+                            <div class="last-qa__filters">
+                                <h5 class="last-qa__filters-title">Filtruj odpowiedzi po kategoriach</h5>
+                                <ul class="last-qa__filters-list">
+                                    <li class="last-qa__filters-item">
+                                        <label>
+                                            <input type="checkbox" jcf> <span>Wszystkie</span>
+                                        </label>
+                                    </li>
+                                    <li class="last-qa__filters-item">
+                                        <label>
+                                            <input type="checkbox" jcf> <span>Ogólne</span>
+                                        </label>
+                                    </li>
+                                    <li class="last-qa__filters-item">
+                                        <label>
+                                            <input type="checkbox" jcf> <span>Kultura</span>
+                                        </label>
+                                    </li>
+                                    <li class="last-qa__filters-item">
+                                        <label>
+                                            <input type="checkbox" jcf> <span>Inwestycje</span>
+                                        </label>
+                                    </li>
+                                    <li class="last-qa__filters-item">
+                                        <label>
+                                            <input type="checkbox" jcf> <span>Gospodarka</span>
+                                        </label>
+                                    </li>
+                                    <li class="last-qa__filters-item">
+                                        <label>
+                                            <input type="checkbox" jcf> <span>Komunikacja</span>
+                                        </label>
+                                    </li>
+                                </ul>
+                            </div>
                             <ul class="last-qa__list">
                                 <li class="last-qa__item">
                                     <span class="last-qa__counter">1</span>
@@ -92,6 +130,45 @@
                                             velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
                                             id est laborum.</p>
                                     </div>
+                                </li>
+                                <li class="last-qa__item">
+                                    <span class="last-qa__counter">4</span>
+                                    <h4 class="last-qa__question">Lorem ipsum dolor sit amet. consectetur adipiscing elit sed ?</h4>
+                                    <p class="last-qa__user">~Tadeusz Nowak</p>
+                                    <div class="last-qa__answer">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                                            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                                            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+                                            id est laborum.</p>
+                                    </div>
+                                </li>
+                                <li class="last-qa__item">
+                                    <span class="last-qa__counter">5</span>
+                                    <h4 class="last-qa__question">Lorem ipsum dolor sit amet. consectetur adipiscing elit sed ?</h4>
+                                    <p class="last-qa__user">~Tadeusz Nowak</p>
+                                    <div class="last-qa__answer">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                                            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                                            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+                                            id est laborum.</p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </section>
+
+                        <section class="pagination">
+                            <ul class="pagination__list">
+                                <li class="pagination__item active">
+                                    <a href="">1</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="">2</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="">3</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="">4</a>
                                 </li>
                             </ul>
                         </section>
