--- a/front/src/assets/styles/components/_slogan.scss
+++ b/front/src/assets/styles/components/_slogan.scss
@@ -4,7 +4,8 @@
   padding: 30px 0;
   &__text {
     position: relative;
-    font-size: calculateRem(95px);
+    font-family: 'Open Sans', sans-serif;
+    font-size: calculateRem(64px);
     text-align: center;
     letter-spacing: .05em;
     line-height: 1.4;
@@ -17,11 +18,13 @@
   }
 
   strong {
-    font-weight: 900;
+    font-weight: 700;
     text-shadow: 1px 1px 0px currentColor;
   }
 
-  span {
+  small {
+    display: block;
+    margin-top: 15px;
     font-size: .5em;
     font-weight: 300;
     color: color('SECONDARY')
